--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "formik": "1.4.1",
     "isomorphic-unfetch": "3.0.0",
     "lodash.get": "4.4.2",
+    "lodash.orderby": "^4.6.0",
     "next": "7.0.2",
     "next-routes": "1.4.2",
     "prismjs": "1.15.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/cookie": "0.3.2",
     "@types/lodash.get": "4.4.4",
+    "@types/lodash.orderby": "^4.6.4",
     "@types/next": "7.0.5",
     "@types/prismjs": "1.9.0",
     "@types/react": "16.7.17",
