--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,6 +24,7 @@
     "isomorphic-unfetch": "3.0.0",
     "lodash": "4.17.11",
     "lodash.get": "4.4.2",
+    "lodash.orderby": "^4.6.0",
     "next": "7.0.2",
     "next-routes": "1.4.2",
     "prismjs": "1.15.0",
@@ -36,6 +37,7 @@
     "@types/cookie": "0.3.2",
     "@types/lodash": "4.14.119",
     "@types/lodash.get": "4.4.4",
+    "@types/lodash.orderby": "^4.6.4",
     "@types/next": "7.0.5",
     "@types/prismjs": "1.9.0",
     "@types/react": "16.7.18",
