--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,7 +32,8 @@
     "react-debounce-input": "3.2.0",
     "react-dom": "^16.7.0-alpha.2",
     "react-modal": "3.8.1",
-    "react-select": "2.2.0"
+    "react-select": "2.2.0",
+    "react-window": "^1.5.0"
   },
   "devDependencies": {
     "@types/cookie": "0.3.2",
@@ -44,6 +45,7 @@
     "@types/react-dom": "16.0.11",
     "@types/react-modal": "3.8.0",
     "@types/react-select": "2.0.11",
+    "@types/react-window": "^1.1.0",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-typescript": "1.1.1",
     "file-loader": "3.0.1",
