--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "isomorphic-unfetch": "3.0.0",
     "lodash": "4.17.11",
     "lodash.get": "4.4.2",
+    "markdown-to-jsx": "^6.9.0",
     "next": "7.0.2",
     "next-routes": "1.4.2",
     "prismjs": "1.15.0",
