Try marked instead of markdown-to-jsx

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,6 +24,7 @@
     "lodash": "4.17.11",
     "lodash.get": "4.4.2",
     "markdown-to-jsx": "^6.9.0",
+    "marked": "^0.6.0",
     "next": "7.0.2",
     "next-routes": "1.4.2",
     "prismjs": "1.15.0",
@@ -38,6 +39,7 @@
     "@types/cookie": "0.3.2",
     "@types/lodash": "4.14.120",
     "@types/lodash.get": "4.4.4",
+    "@types/marked": "^0.6.0",
     "@types/next": "7.0.6",
     "@types/prismjs": "1.9.0",
     "@types/react": "16.7.22",
