Use react-markdown, remove others

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,17 +20,17 @@
     "cookie": "0.3.1",
     "downshift": "3.2.0",
     "formik": "1.4.2",
+    "html-react-parser": "^0.6.1",
     "isomorphic-unfetch": "3.0.0",
     "lodash": "4.17.11",
     "lodash.get": "4.4.2",
-    "markdown-to-jsx": "^6.9.0",
-    "marked": "^0.6.0",
     "next": "7.0.2",
     "next-routes": "1.4.2",
     "prismjs": "1.15.0",
     "react": "16.8.0-alpha.1",
     "react-apollo": "2.4.0",
     "react-dom": "16.8.0-alpha.1",
+    "react-markdown": "^4.0.6",
     "react-modal": "3.8.1",
     "react-select": "2.3.0",
     "serve-favicon": "^2.5.0"
@@ -39,7 +39,6 @@
     "@types/cookie": "0.3.2",
     "@types/lodash": "4.14.120",
     "@types/lodash.get": "4.4.4",
-    "@types/marked": "^0.6.0",
     "@types/next": "7.0.6",
     "@types/prismjs": "1.9.0",
     "@types/react": "16.7.22",
@@ -59,6 +58,7 @@
     "nodemon": "1.18.9",
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
+    "typed-react-markdown": "^0.1.0",
     "typescript": "3.2.4",
     "url-loader": "1.1.2"
   },
