Use ts-node v8.0.2, with --type-check arg instead of --typeCheck (+1 squashed commits)
Squashed commits:

[b234045] Revert update dependency ts-node to v8, Commit: dd5dc8da0b3585e01f664d2eccc8204b256932ef (+1 squashed commits)

Squashed commits:

[7f33109] Revert "switch to ts-node-dev"This reverts commit f22dd396cc3fd36602a627c9216bb11fb60bee1e.

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --project tsconfig.server.json server/index.ts",
+    "dev": "nodemon server/index.ts",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -55,7 +55,6 @@
     "next-plugin-transpile-modules": "1.0.0",
     "nodemon": "1.18.9",
     "ts-node": "8.0.2",
-    "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "5.12.1",
     "typescript": "3.2.4",
     "url-loader": "1.1.2"
