--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server/index.ts",
+    "dev": "ts-node-dev --respawn --project tsconfig.server.json server/index.ts",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -57,6 +57,7 @@
     "next-plugin-transpile-modules": "1.0.0",
     "nodemon": "1.18.9",
     "ts-node": "8.0.2",
+    "ts-node-dev": "1.0.0-pre.32",
     "tslint": "5.12.1",
     "typed-react-markdown": "^0.1.0",
     "typescript": "3.2.4",
