--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
   "types": "dist/src/index.d.ts",
   "dependencies": {
     "date-fns": "1.30.1",
+    "prismjs": "^1.15.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
