--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,7 +26,6 @@
     "lodash.get": "4.4.2",
     "next": "^7.0.3",
     "next-routes": "1.4.2",
-    "prismjs": "1.15.0",
     "react": "^16.8.1",
     "react-apollo": "2.4.0",
     "react-dom": "^16.8.1",
@@ -34,6 +33,7 @@
     "react-modal": "3.8.1",
     "react-select": "2.3.0",
     "refractor": "^2.6.2",
+    "rehype": "^7.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
